--- a/Flexbox_Layout/styles.css
+++ b/Flexbox_Layout/styles.css
@@ -10,9 +10,10 @@
         "nav header header"
         "nav article aside"
         "nav singlecard aside"
+        "nav media aside"
         "nav footer footer";
     grid-template-columns: 1fr 4fr 1.5fr;
-    grid-template-rows: auto 1fr auto auto;
+    grid-template-rows: auto 1fr auto auto auto;
     height: 100vh;
     gap: 5px;
     padding: 10px;
@@ -29,6 +30,7 @@
     grid-area: header;
     background-color: #9ccc2c;
     padding: 20px;
+    text-align: center;
 }
 
 .article {
@@ -36,8 +38,14 @@
     background-color: white;
     padding: 20px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+.photo-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 20px 0;
 }
 
 .gallery {
@@ -59,12 +67,20 @@
     padding: 20px;
 }
 
-.single-card {
-    grid-area: singlecard;
+/* Flex Card Section */
+.flexcard-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.flex-cards {
     display: flex;
     justify-content: center;
-    padding: 5px;
-    background-color: #ffffff;
+    gap: 20px;
+    width: 100%;
+    max-width: 900px;
 }
 
 .card {
@@ -73,7 +89,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: center;
-    width: 100%;
+    width: 48%;
 }
 
 .card img {
@@ -83,7 +99,8 @@
 
 .card h3 {
     margin: 15px 0;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .card p {
@@ -100,10 +117,72 @@
     margin: 15px;
     border-radius: 5px;
     cursor: pointer;
+    transition: 0.3s;
 }
+
+.card button:hover {
+    background: #7aa420;
+}
+
+.aside {
+    grid-area: aside;
+    background-color: #faf3d4;
+    padding: 20px;
+}
+
+.media-section {
+    grid-area: media;
+    background: #F6F3EB;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.media-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.media {
+    display: flex;
+    align-items: flex-start;
+    background: white;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+}
+
+.media-object {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    margin-right: 15px;
+}
+
+.media-body {
+    flex: 1;
+}
+
+.media-heading {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.media p {
+    font-size: 14px;
+    color: #666;
+}
+
 
 .footer {
     grid-area: footer;
     background-color: #9ccc2c;
     padding: 20px;
+    text-align: center;
 }
+ 
+
+ 
